--- a/styles/views/booked.css
+++ b/styles/views/booked.css
@@ -1,16 +1,17 @@
 .booked-main-container {
-    width: 100%;
+    width: 80%;
     height: 400px;
     margin: auto ;
     text-align: center;
-    background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     padding-top:25px;
     overflow: hidden;
 }
 
 .booked-main-container h1 {
-    font-size: 3rem;
+    font-size: 4.5rem;
     margin-bottom: 2rem;
 
 }
